syntax = "proto3";

package cluster;

import "pkg/container/src/proto/config.proto";

// Config parameters used to start up a single Node instance.
message NodeConfig {
    // Path to a directory into which we will store all container related data.
    string data_dir = 1;

    // Port used for the main node management service.
    int32 service_port = 2;

    // Base template used to construct worker containers.
    ContainerConfig container_template = 3;
    
    // Maximum amount of time in seconds after a container is terminated with a signal before we
    // forcefully kill it.
    uint32 graceful_shutdown_timeout_secs = 4;

    // If true and this is the first time the node is running, we will initialize the id of this
    // node with the first 16 characters of /etc/machine-id
    bool bootstrap_id_from_machine_id = 5;

    // Range of network ports which may be used by workers running on this node.
    // TODO: Have the node runtime validate that we only receive workers with ports in this range. 
    PortRange allocatable_port_range = 6;

    // When running in a managed cluster this field is required.
    string zone = 7;
}

// Represents all port numbers in the range [start, end).
message PortRange {
    uint32 start = 1;
    uint32 end = 2;
}